  (the BCIH database is getting too out-of-date)
- add the Anscombe Quartet to the gretl data files
- on Windows, make EMF graphs respect the user's choice of
  plotting colors (required a modification to gnuplot)
- add option to save graphs in EMF format
- various minor gui fixes and enhancements
- update Windows version to gtk 2.4.9
- start adding user-defined functions

7/23/2004 version 1.2.9
- fixes for LaTeX printing of autoregressive models
- correct Spanish help strings
- fix font problem for some objects in session window
- fix for exporting time-series data to R version 1.9
- add option to export data to PcGive .dat format (thanks to
  Michal Kurcewicz)
- enable TRAMO analysis of annual time-series data
- Windows version: ensure user directory gets created!  This
  was broken in gretl 1.2.6 and 1.2.7, which could produce
  strange-seeming problems.
- hccm command: ensure that the F-stat shown for the model
  is based on the robust covariance matrix; also ensure
  the robust F-stat is used when robust standard errors are
  selected with the ols command
- add start-up option to dump gretl configuration to a text file
  ('-c' or '--dump')
- small fixes for nonlinear least squares
- Replace fixed IP address for database server with hostname
- Fix for copying material from gretl using Ctrl-C on Windows
- Update Windows version to gtk 2.4.3 runtime
- add "restrict" command for general Wald test of linear
  restrictions on a model
- add "ok(x)" as a short synonym for "!missing(x)" in the 
  context of the genr command
- change smpl behavior: restrictions now cumulate by default
- add "smpl" option: "--replace" makes a sample restriction
  start from the full dataset rather than cumulating with any
  previous restrictions (note: this was the old default)
- another new "smpl" option: "smpl 100 --random" selects 100
  observations from the dataset at random
- allow the "--robust" option to the "var" command
- fix for effect of Up/Down keys in main gretl window