@@ -116,7 +116,7 @@ enum model_selection_criteria {
 
 /* functions follow */
 
-void libgretl_init (CMD *cmd);
+void libgretl_init (CMD *cmd, const PATHS *paths);
 
 void libgretl_cleanup (CMD *cmd);
  
